# innate-chaos

./: .gitignore  .gitmodules  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  update-submodules.sh
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  scheduler.py
backend/models/: __init__.py  allocation.py  news.py  price.py  signal.py
backend/services/: __init__.py  allocation_engine.py  data_fetcher.py  risk_classifier.py  signal_engine.py
docs/: 01-overview.md  02-architecture.md  03-api-reference.md  04-deployment.md  05-hyperliquid-sdk.md  06-database.md  07-implementation-status.md  08-references.md
findicators/: .gitignore  README.md  dev.sh  docker-compose.yml
findicators/backend/: .env.example  pyproject.toml
findicators/backend/app/: config.py  database.py  main.py  scheduler.py
findicators/backend/app/adapters/: base.py  coingecko.py  fred.py  hyperliquid.py  yahoo_finance.py
findicators/backend/app/api/: allocation.py  prices.py  regime.py  signals.py
findicators/backend/app/models/: price.py  regime.py  signal.py
findicators/backend/app/schemas/: price.py  regime.py  signal.py
findicators/backend/app/services/: allocation_engine.py  price_service.py  risk_engine.py  signal_engine.py
findicators/backend/tests/: test_adapters.py
findicators/frontend/: package.json
frontend/: .env.local.example  Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  (+1 more)
scripts/: setup.sh
tasks/: task.md
tracing/: tracing-macro-index.md
(+38 files in other folders)
