[project]
name = "findicators-backend"
version = "0.1.0"
description = "Findicators - Macro Financial Dashboard Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "numpy>=2.2",
    "structlog>=24.4",
    "python-dotenv>=1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
